--- a/richwysiwygeditor/src/main/res/values/dimens.xml
+++ b/richwysiwygeditor/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="toolbar_icon_height_size">35dp</dimen>
     <dimen name="color_button_size">35dp</dimen>
     <dimen name="fab_margin">12dp</dimen>
+    <dimen name="fab_small_margin">6dp</dimen>
 
 </resources>
