--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -193,24 +192,24 @@
 
     </HorizontalScrollView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/button_scroll_top"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="false"
-        android:src="@drawable/ic_arrow_up"
-        app:backgroundTint="@color/fab"
-        app:fabSize="mini"
-        android:visibility="gone"
-        style="@style/fab"/>
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/button_scroll_top"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_alignParentBottom="false"-->
+<!--        android:src="@drawable/ic_arrow_up"-->
+<!--        app:backgroundTint="@color/fab"-->
+<!--        app:fabSize="mini"-->
+<!--        android:visibility="gone"-->
+<!--        style="@style/fab"/>-->
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/button_scroll_down"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_arrow_down"
-        app:backgroundTint="@color/fab"
-        app:fabSize="mini"
-        android:visibility="gone"
-        style="@style/fab"/>
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/button_scroll_down"-->
+<!--        android:layout_alignParentTop="false"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:src="@drawable/ic_arrow_down"-->
+<!--        app:backgroundTint="@color/fab"-->
+<!--        app:fabSize="mini"-->
+<!--        android:visibility="gone"-->
+<!--        style="@style/fab"/>-->
 
 </RelativeLayout>
