--- a/richwysiwygeditor/src/main/res/layout/dialog_edit_image.xml
+++ b/richwysiwygeditor/src/main/res/layout/dialog_edit_image.xml
@@ -30,4 +30,12 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal" />
 
+    <CheckBox
+        android:id="@+id/check_box_similar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:text="@string/set_similar_image_params" />
+
 </LinearLayout>
