--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -27,6 +28,68 @@
         android:indeterminate="true"
         />
 
+
+    <net.cachapa.expandablelayout.ExpandableLayout
+        android:id="@+id/layout_right_expander"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:orientation="horizontal"
+        app:el_duration="300"
+        app:el_expanded="false"
+        app:el_parallax="0.5">
+
+        <android.widget.GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_undo"
+                style="@style/action_button"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:src="@drawable/ic_undo" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_redo"
+                style="@style/action_button"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:src="@drawable/ic_redo" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_up"
+                style="@style/action_button"
+                android:layout_row="1"
+                android:layout_columnSpan="2"
+                android:src="@drawable/ic_image" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_left"
+                style="@style/action_button"
+                android:layout_row="2"
+                android:src="@drawable/ic_image" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_right"
+                style="@style/action_button"
+                android:layout_row="2"
+                android:src="@drawable/ic_image" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_down"
+                style="@style/action_button"
+                android:layout_row="3"
+                android:layout_columnSpan="2"
+                android:src="@drawable/ic_image" />
+
+        </android.widget.GridLayout>
+
+    </net.cachapa.expandablelayout.ExpandableLayout>
+
     <HorizontalScrollView
         android:id="@+id/layout_toolbar"
         android:layout_width="match_parent"
@@ -43,16 +106,6 @@
             android:paddingTop="3dp"
             android:paddingBottom="3dp"
             android:orientation="horizontal">
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_undo"
-                style="@style/action_button"
-                android:src="@drawable/ic_undo" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_redo"
-                style="@style/action_button"
-                android:src="@drawable/ic_redo" />
 
             <View style="@style/separ"/>
 
