Fix right clipboard panel in the editor; Add ClickListeners and icons to ActionButtons.

--- a/richwysiwygeditor/src/main/res/values/colors.xml
+++ b/richwysiwygeditor/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="green">#008000</color>
 
     <color name="toolbar_background">#EEE</color>
+    <color name="rightbar_background">#E8EDFF</color>
     <color name="fab">#4D86B945</color>
 
 </resources>
