--- a/richwysiwygeditor/src/main/res/values/styles.xml
+++ b/richwysiwygeditor/src/main/res/values/styles.xml
@@ -20,8 +20,9 @@
     <style name="action_button">
         <item name="android:layout_width">@dimen/toolbar_icon_width_size</item>
         <item name="android:layout_height">@dimen/toolbar_icon_height_size</item>
-        <item name="android:background">?attr/selectableItemBackground</item>
+<!--        <item name="android:background">?attr/selectableItemBackground</item>-->
         <item name="android:scaleType">fitCenter</item>
+        <item name="android:background">@color/rightbar_background</item>
     </style>
 
     <style name="label">
