--- a/richwysiwygeditor/src/main/res/values/colors.xml
+++ b/richwysiwygeditor/src/main/res/values/colors.xml
@@ -25,8 +25,9 @@
     <color name="pale_cyan">#ccffff</color>
     <color name="green">#008000</color>
 
-    <color name="toolbar_background">#EEE</color>
-    <color name="rightbar_background">#E8EDFF</color>
+<!--    <color name="toolbar_background">#EEE</color>-->
+    <color name="toolbar_background">#B2E0EAFF</color>
+    <color name="action_background">#B2E0EAFF</color>
     <color name="fab">#4D86B945</color>
 
 </resources>
