--- a/richwysiwygeditor/src/main/res/values/styles.xml
+++ b/richwysiwygeditor/src/main/res/values/styles.xml
@@ -22,7 +22,11 @@
         <item name="android:layout_height">@dimen/toolbar_icon_height_size</item>
 <!--        <item name="android:background">?attr/selectableItemBackground</item>-->
         <item name="android:scaleType">fitCenter</item>
-        <item name="android:background">@color/rightbar_background</item>
+        <item name="android:layout_marginLeft">1dp</item>
+        <item name="android:layout_marginRight">1dp</item>
+        <item name="android:layout_marginTop">3dp</item>
+        <item name="android:layout_marginBottom">3dp</item>
+        <item name="android:background">@color/action_background</item>
     </style>
 
     <style name="label">
