--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -73,6 +73,7 @@
                 android:layout_row="1"
                 android:layout_column="0"
                 android:layout_columnSpan="2"
+                android:visibility="gone"
                 android:src="@drawable/ic_arrow_up" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
@@ -96,14 +97,15 @@
                 android:layout_row="3"
                 android:layout_column="0"
                 android:layout_columnSpan="2"
+                android:visibility="gone"
                 android:src="@drawable/ic_arrow_down" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_select_start"
+                android:id="@+id/button_selection_mode"
                 style="@style/action_button"
                 android:layout_row="4"
                 android:layout_column="0"
-                android:src="@drawable/ic_select_all" />
+                android:src="@drawable/ic_selection_mode" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_select_word"
@@ -164,8 +166,9 @@
             android:id="@+id/layout_toolbar_buttons"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:paddingBottom="3dp"
             android:background="@color/white"
             android:orientation="horizontal">
 <!--            android:paddingTop="2dp"-->
