--- a/richwysiwygeditor/src/main/res/values/styles.xml
+++ b/richwysiwygeditor/src/main/res/values/styles.xml
@@ -26,6 +26,7 @@
         <item name="android:layout_marginRight">1dp</item>
         <item name="android:layout_marginTop">3dp</item>
         <item name="android:layout_marginBottom">3dp</item>
+        <item name="android:padding">4dp</item>
         <item name="android:background">@color/action_background</item>
     </style>
 
@@ -38,7 +39,7 @@
     <style name="separ">
         <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:background">#CCC</item>
+        <item name="android:background">#999</item>
         <item name="android:layout_marginLeft">6dp</item>
         <item name="android:layout_marginRight">6dp</item>
         <item name="android:layout_marginTop">3dp</item>
