--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -24,142 +24,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_centerInParent="true"
-        android:indeterminate="true"
-        />
-
-<!--
-
-    <net.cachapa.expandablelayout.ExpandableLayout
-        android:id="@+id/layout_right_expander"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:orientation="horizontal"
-        android:paddingBottom="30dp"
-        app:el_duration="300"
-        app:el_expanded="false"
-        app:el_parallax="0.5">
-
-        <android.widget.GridLayout
-            android:id="@+id/layout_right_buttons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rowCount="8"
-            android:columnCount="2"
-            >
-&lt;!&ndash;            android:background="@color/toolbar_background"&ndash;&gt;
-
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_undo"
-                style="@style/action_button"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:src="@drawable/ic_undo" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_redo"
-                style="@style/action_button"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:src="@drawable/ic_redo" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_up"
-                style="@style/action_button"
-                android:layout_gravity="center_horizontal"
-                android:layout_row="1"
-                android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:visibility="gone"
-                android:src="@drawable/ic_arrow_up" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_left"
-                style="@style/action_button"
-                android:layout_row="2"
-                android:layout_column="0"
-                android:src="@drawable/ic_arrow_left" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_right"
-                style="@style/action_button"
-                android:layout_row="2"
-                android:layout_column="1"
-                android:src="@drawable/ic_arrow_right" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_down"
-                style="@style/action_button"
-                android:layout_gravity="center_horizontal"
-                android:layout_row="3"
-                android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:visibility="gone"
-                android:src="@drawable/ic_arrow_down" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_select_word"
-                style="@style/action_button"
-                android:layout_row="4"
-                android:layout_column="0"
-                android:src="@drawable/ic_select_all" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_select_all"
-                style="@style/action_button"
-                android:layout_row="4"
-                android:layout_column="1"
-                android:src="@drawable/ic_select_all" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_selection_mode"
-                style="@style/action_button"
-                android:layout_row="5"
-                android:layout_column="0"
-                android:src="@drawable/ic_selection_mode" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_forward_del"
-                style="@style/action_button"
-                android:layout_row="5"
-                android:layout_column="1"
-                android:src="@android:drawable/ic_delete" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_copy"
-                style="@style/action_button"
-                android:layout_row="6"
-                android:layout_column="0"
-                android:src="@drawable/ic_copy" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_cut"
-                style="@style/action_button"
-                android:layout_row="6"
-                android:layout_column="1"
-                android:src="@drawable/ic_cut" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_paste"
-                style="@style/action_button"
-                android:layout_row="7"
-                android:layout_column="0"
-                android:src="@drawable/ic_paste" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_paste_text"
-                style="@style/action_button"
-                android:layout_row="7"
-                android:layout_column="1"
-                android:src="@drawable/ic_paste" />
-
-        </android.widget.GridLayout>
-
-    </net.cachapa.expandablelayout.ExpandableLayout>
--->
+        android:indeterminate="true" />
 
     <RelativeLayout
         android:id="@+id/layout_toolbar"
@@ -239,11 +104,13 @@
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_code"
                     style="@style/action_button"
+                    android:contentDescription="@string/code"
                     android:src="@drawable/ic_code" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_quote"
                     style="@style/action_button"
+                    android:contentDescription="@string/quotes"
                     android:src="@drawable/ic_quote" />
 
                 <View style="@style/separ"/>
@@ -257,26 +124,31 @@
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_unordered_list"
                     style="@style/action_button"
+                    android:contentDescription="@string/bulled_list"
                     android:src="@drawable/ic_bullet_list" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_ordered_list"
                     style="@style/action_button"
+                    android:contentDescription="@string/number_list"
                     android:src="@drawable/ic_numbered_list" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_indent_inc"
                     style="@style/action_button"
+                    android:contentDescription="@string/indent_inc"
                     android:src="@drawable/ic_indent_inc" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_indent_dec"
                     style="@style/action_button"
+                    android:contentDescription="@string/indent_dec"
                     android:src="@drawable/ic_indent_dec" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_remove_format"
                     style="@style/action_button"
+                    android:contentDescription="@string/clear_format"
                     android:src="@drawable/ic_clear_format"/>
 
                 <View style="@style/separ"/>
@@ -314,11 +186,13 @@
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_insert_table"
                     style="@style/action_button"
+                    android:contentDescription="@string/insert_table"
                     android:src="@drawable/ic_table" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_insert_formula"
                     style="@style/action_button"
+                    android:contentDescription="@string/insert_formula"
                     android:src="@drawable/ic_formula" />
 
             </LinearLayout>
@@ -344,11 +218,13 @@
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_undo"
                     style="@style/action_button"
+                    android:contentDescription="@string/undo"
                     android:src="@drawable/ic_undo" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_redo"
                     style="@style/action_button"
+                    android:contentDescription="@string/redo"
                     android:src="@drawable/ic_redo" />
 
                 <View style="@style/separ"/>
@@ -358,16 +234,19 @@
                     style="@style/action_button"
                     android:layout_gravity="center_horizontal"
                     android:visibility="gone"
+                    android:contentDescription="@string/up"
                     android:src="@drawable/ic_arrow_up" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_left"
                     style="@style/action_button"
+                    android:contentDescription="@string/left"
                     android:src="@drawable/ic_arrow_left" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_right"
                     style="@style/action_button"
+                    android:contentDescription="@string/right"
                     android:src="@drawable/ic_arrow_right" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
@@ -375,21 +254,25 @@
                     style="@style/action_button"
                     android:layout_gravity="center_horizontal"
                     android:visibility="gone"
+                    android:contentDescription="@string/down"
                     android:src="@drawable/ic_arrow_down" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_selection_mode"
                     style="@style/action_button"
+                    android:contentDescription="@string/selection_mode"
                     android:src="@drawable/ic_selection_mode" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_select_word"
                     style="@style/action_button"
+                    android:contentDescription="@string/select_word"
                     android:src="@drawable/ic_select_word" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_select_all"
                     style="@style/action_button"
+                    android:contentDescription="@string/select_all"
                     android:src="@drawable/ic_select_all" />
 
                 <View style="@style/separ"/>
@@ -397,21 +280,25 @@
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_copy"
                     style="@style/action_button"
+                    android:contentDescription="@string/copy"
                     android:src="@drawable/ic_copy" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_cut"
                     style="@style/action_button"
+                    android:contentDescription="@string/cut"
                     android:src="@drawable/ic_cut" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_paste"
                     style="@style/action_button"
+                    android:contentDescription="@string/paste"
                     android:src="@drawable/ic_paste" />
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_paste_text"
                     style="@style/action_button"
+                    android:contentDescription="@string/paste_text"
                     android:src="@drawable/ic_paste_text" />
 
                 <View style="@style/separ"/>
@@ -419,6 +306,7 @@
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_forward_del"
                     style="@style/action_button"
+                    android:contentDescription="@string/forward_delete"
                     android:src="@drawable/ic_forward_delete" />
 
             </LinearLayout>
