--- a/richwysiwygeditor/src/main/res/drawable/ic_paste_text.xml
+++ b/richwysiwygeditor/src/main/res/drawable/ic_paste_text.xml
@@ -1,14 +1,6 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="35dp"
-    android:height="35dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#000000"
-        android:pathData="M19,2h-4.18C14.4,0.84 13.3,0 12,0c-1.3,0 -2.4,0.84 -2.82,2L5,2c-1.1,0 -2,0.9 -2,2v16c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,4c0,-1.1 -0.9,-2 -2,-2zM12,2c0.55,0 1,0.45 1,1s-0.45,1 -1,1 -1,-0.45 -1,-1 0.45,-1 1,-1zM19,20L5,20L5,4h2v3h10L17,4h2v16z" />
-    <path
-        android:fillAlpha="1"
-        android:fillColor="#000000"
-        android:pathData="M6.5697,8.3623L17.3197,8.3623l0,2.3l-3.8672,0l0,8.564L10.4447,19.2263L10.4447,10.6623L6.5697,10.6623Z"
-        android:strokeColor="#00000000" />
+<vector android:height="35dp" android:viewportHeight="24"
+    android:viewportWidth="24" android:width="35dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000" android:pathData="M19,2h-4.18C14.4,0.84 13.3,0 12,0c-1.3,0 -2.4,0.84 -2.82,2L5,2c-1.1,0 -2,0.9 -2,2v16c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,4c0,-1.1 -0.9,-2 -2,-2zM12,2c0.55,0 1,0.45 1,1s-0.45,1 -1,1 -1,-0.45 -1,-1 0.45,-1 1,-1zM19,20L5,20L5,4h2v3h10L17,4h2v16z"/>
+    <path android:fillAlpha="1" android:fillColor="#000000"
+        android:pathData="M6.9139,8.3623L16.9996,8.3623l0,2.3l-3.7195,0l0,8.2903L10.6407,18.9526L10.6407,10.6623L6.9139,10.6623Z" android:strokeColor="#00000000"/>
 </vector>
