--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -15,6 +15,8 @@
         android:background="@color/white"
         android:gravity="start"
         android:textCursorDrawable="@drawable/edit_cursor" />
+<!--    android:paddingLeft="5dp"-->
+<!--    android:paddingRight="5dp"-->
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -214,6 +216,14 @@
                 android:layout_height="match_parent"
                 android:background="@color/white"
                 android:orientation="horizontal">
+
+                <com.gee12.htmlwysiwygeditor.ActionButton
+                    android:id="@+id/button_keyboard"
+                    style="@style/action_button"
+                    android:contentDescription="@string/keyboard"
+                    android:src="@drawable/ic_keyboard" />
+
+                <View style="@style/separ"/>
 
                 <com.gee12.htmlwysiwygeditor.ActionButton
                     android:id="@+id/button_undo"
