--- a/richwysiwygeditor/src/main/res/layout/popup_text_color.xml
+++ b/richwysiwygeditor/src/main/res/layout/popup_text_color.xml
@@ -13,6 +13,13 @@
         android:background="@color/white">
 
         <Button
+            android:id="@+id/color_picker"
+            android:layout_width="@dimen/color_button_size"
+            android:layout_height="@dimen/color_button_size"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ic_color_picker" />
+
+        <Button
             android:id="@+id/color_white"
             android:layout_width="@dimen/color_button_size"
             android:layout_height="@dimen/color_button_size"
