--- a/richwysiwygeditor/src/main/res/values/styles.xml
+++ b/richwysiwygeditor/src/main/res/values/styles.xml
@@ -30,6 +30,15 @@
         <item name="android:background">@color/action_background</item>
     </style>
 
+    <style name="color_button">
+        <item name="android:layout_width">@dimen/color_button_size</item>
+        <item name="android:layout_height">@dimen/color_button_size</item>
+        <!--        <item name="android:background">?attr/selectableItemBackground</item>-->
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
     <style name="label">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
